[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Hi! I am your webapp.I am Prakash, creating my first web application. I am very much happy to join this course and learn and experience in web app.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
