--- a/ui/Airbus.html
+++ b/ui/Airbus.html
@@ -1,1 +1,9 @@
-
+<html>
+    <head>
+        <title>
+            My Webpage</title>
+            </head>
+            <body>
+                I am writing my web page for the first time.
+                </body>
+                </html>
